@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.8.2  Last change: 2016 Oct 27
+*vifm-app.txt*    For Vifm version 0.8.2  Last change: 2016 Nov 05
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -2654,6 +2654,25 @@ and :pushd commands (and on startup if 'autochpos' is disabled in the vifmrc).
 l key in the ":history ." and ":trashes" menus is treated like :cd command.
 This option also affects marks so that navigating to a mark doesn't restore
 cursor position.
+
+                                               *vifm-'caseoptions'*
+caseoptions
+type: charset
+default: ""
+
+This option gives additional control over case sensitivity by allowing
+overriding default behaviour to either always be case sensitive or
+always be case insensitive.  Possible values form pairs of lower and upper
+case letters that configure specific aspect of behaviour:
+  p - always ignore case of paths during completion.
+  P - always match case of paths during completion.
+  g - always ignore case of characters for f/F/;/,.
+  G - always match case of characters for f/F/;/,.
+
+At most one item of each pair takes affect, if both or more are present, only
+the last one matters.  When of none pair's elements are present, the behaviour
+is default (depends on operating system for path completion and on values of
+|vifm-'ignorecase'| and |vifm-'smartcase'| options for file navigation).
 
                                                *vifm-'cdpath'* *vifm-'cd'*
 cdpath cd
