@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@openmailbox.org>
-" Last Change: October 27, 2016
+" Last Change: November 05, 2016
 " Based On:    Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -117,17 +117,17 @@ syntax keyword vifmHiColors contained black red green yellow blue magenta cyan
 syntax case match
 
 " Options
-syntax keyword vifmOption contained aproposprg autochpos cdpath cd chaselinks
-		\ classify columns co confirm cf cpoptions cpo cvoptions deleteprg dotdirs
-		\ dotfiles dirsize fastrun fillchars fcs findprg followlinks fusehome
-		\ gdefault grepprg history hi hlsearch hls iec ignorecase ic iooptions
-		\ incsearch is laststatus lines locateprg ls lsview mintimeoutlen number nu
-		\ numberwidth nuw relativenumber rnu rulerformat ruf runexec scrollbind scb
-		\ scrolloff so sort sortgroups sortorder sortnumbers shell sh shortmess shm
-		\ slowfs smartcase scs statusline stl suggestoptions syscalls tabstop
-		\ timefmt timeoutlen title tm trash trashdir ts tuioptions to undolevels ul
-		\ vicmd viewcolumns vifminfo vimhelp vixcmd wildmenu wmnu wildstyle
-		\ wordchars wrap wrapscan ws
+syntax keyword vifmOption contained aproposprg autochpos caseoptions cdpath cd
+		\ chaselinks classify columns co confirm cf cpoptions cpo cvoptions
+		\ deleteprg dotdirs dotfiles dirsize fastrun fillchars fcs findprg
+		\ followlinks fusehome gdefault grepprg history hi hlsearch hls iec
+		\ ignorecase ic iooptions incsearch is laststatus lines locateprg ls lsview
+		\ mintimeoutlen number nu numberwidth nuw relativenumber rnu rulerformat ruf
+		\ runexec scrollbind scb scrolloff so sort sortgroups sortorder sortnumbers
+		\ shell sh shortmess shm slowfs smartcase scs statusline stl suggestoptions
+		\ syscalls tabstop timefmt timeoutlen title tm trash trashdir ts tuioptions
+		\ to undolevels ul vicmd viewcolumns vifminfo vimhelp vixcmd wildmenu wmnu
+		\ wildstyle wordchars wrap wrapscan ws
 
 " Disabled boolean options
 syntax keyword vifmOption contained noautochpos nocf nochaselinks nodotfiles
