@@ -362,7 +362,9 @@ hi CmpMismatch
 
 " "set" should be highlighted as :command
 " "*dotfiles" should be highlighted as 'option'
+" "caseoptions" should be highlighted as 'option'
 set dotfiles nodotfiles invdotfiles dotfiles!
+set caseoptions
 
 " TODO
 
